@@ -4,9 +4,11 @@ DuroDBMS 1.0
 
 - Duro D/T now supports a CONST statement.
 
-- The second argument of aggregate operators SUM, AVG, MAX, MIN, ALL, AND, ANY, OR
+- The second parameter of aggregate operators SUM, AVG, MAX, MIN, ALL, AND, ANY, OR
   can be an expresssion and is optional if the relation has only one attribute.
   The second argument of RDB_min() etc. is now of type RDB_expression *. 
+
+- Added Duro_rollback_all().
 
 - Made datetime type ordered.
 
